--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     🔥🔥🔥 - This is a fresh new take. <br>
     🔥🔥 - I have heard similar things but it bangs so good I don’t care.<br>
     🔥 - Nothing groundbreaking but fun for mixing</p>
-    <p>All ratings are good ratings. There are no "bad" ratings here.</p>
+    <p>Again, all ratings are good ratings.</p>
 
   <hr>
 
